syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.protobuf";

service TestService {
  rpc RestartDatabase(EmptyTest) returns (EmptyTest);
  rpc SwitchToTestDatabase(EmptyTest) returns (EmptyTest);
  rpc SwitchToProductionDatabase(EmptyTest) returns (EmptyTest);
}

message EmptyTest {

}